<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trip_overview_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/trip_overview_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TripOverviewActivity">

        <!-- The ActionBar displayed at the top -->
        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:indeterminateTint="@color/bart_primary1"
                android:visibility="gone" />

            <TextView
                android:id="@+id/empty_overview_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/empty_overview_list_view"
                android:textSize="24sp"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/station_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.sanderp.bartrider.view.AutoResizeTextView
                    android:id="@+id/trip_header"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/empty_field"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="@string/sample_trip" />

                <android.support.v4.widget.SwipeRefreshLayout
                    android:id="@+id/swipe_refresh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/trip_header">

                    <ListView
                        android:id="@+id/trip_list_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:choiceMode="singleChoice"
                        tools:listitem="@layout/trip_overview_list_item" />

                </android.support.v4.widget.SwipeRefreshLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/progress_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/trip_fare"
                android:layout_below="@+id/station_layout" >

                <ProgressBar
                    android:id="@+id/next_departure_progress_bar"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerInParent="true"
                    android:max="1200"
                    android:progress="1200"
                    android:progressDrawable="@drawable/circular_progress_bar"
                    style="?android:attr/progressBarStyleHorizontal" />

                <TextView
                    android:id="@+id/next_departure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/next_departure_progress_bar"
                    android:layout_alignTop="@id/next_departure_progress_bar"
                    android:layout_alignEnd="@id/next_departure_progress_bar"
                    android:layout_alignBottom="@id/next_departure_progress_bar"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/empty_field"
                    android:textSize="42sp"
                    tools:text="@string/sample_time_until_departures" />

                <TextView
                    android:id="@+id/next_departure_window"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/next_departure_progress_bar"
                    android:layout_alignTop="@id/next_departure_progress_bar"
                    android:layout_alignEnd="@id/next_departure_progress_bar"
                    android:layout_alignBottom="@id/next_departure_progress_bar"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:layout_marginTop="52dp"
                    android:text="@string/time_window"
                    android:textSize="16sp"
                    tools:text="@string/time_window" />

            </RelativeLayout>

            <TextView
                android:id="@+id/trip_fare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/trip_fare_info"
                android:layout_centerHorizontal="true"
                android:text="@string/empty_field"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/trip_fare_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/fare_info"
                android:textSize="12sp" />

        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:tint="@color/material_light"
            app:srcCompat="@drawable/ic_add"
            style="@style/fab" />

    </RelativeLayout>

    <fragment
        android:id="@+id/trip_drawer_fragment"
        android:name="com.sanderp.bartrider.TripDrawerFragment"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        tools:layout="@layout/trip_drawer_fragment" />

</android.support.v4.widget.DrawerLayout>