<resources>
    <string name="app_name">"BART Rider"</string>
    <string name="action_advisory">Advisory</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_bart_map">BART Map</string>
    <string name="action_sfbart_twitter">\@SFBART</string>
    <string name="action_sfbartalert_twitter">\@SFBARTalert</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_reverse_trip">Reverse Trip</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="co2_saved">CO₂ saved: %1$.2f pounds.</string>
    <string name="default_advisory">No delays reported.</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="empty_favorites_list_view">You have no favorite trips.</string>
    <string name="empty_field">N/A</string>
    <string name="empty_overview_list_view">Select a trip using the \'+\' button on the bottom right.</string>
    <string name="empty_recents_list_view">You have no recent trips.</string>
    <string name="fares">$%1$.2f / $%2$.2f*</string>
    <string name="fare_info">*youth, senior or RTC Clipper card</string>
    <string name="favorite_trips">Favorite Trips</string>
    <string name="offline_status">BART is offline for the night.\nTrains will start running at %1$sam.</string>
    <string name="recent_trips">Recent Trips</string>
    <string name="sample_fare">"$5.00"</string>
    <string name="sample_time">"11:43 AM"</string>
    <string name="sample_orig_abbr">ORIG</string>
    <string name="sample_dest_abbr">DEST</string>
    <string name="sample_orig">Origin Station</string>
    <string name="sample_co2">7.39</string>
    <string name="sample_dest">Destination Station</string>
    <string name="sample_time_until_departures">12:39</string>
    <string name="sample_trip">Origin Station - Destination Station</string>
    <string name="status_leaving">Leaving…</string>
    <string name="time_window">±30 sec</string>
    <string name="time_window_api_error">±N/A</string>
    <string name="train_length">%1$d×</string>
    <string name="train_length_default">9x</string>
</resources>
