<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/trip_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginTop="24dp"
        android:background="@color/bart_primary1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.1"
                android:scaleType="centerCrop"
                android:src="@drawable/bart_map_small" />

        </RelativeLayout>

        <TextView
            android:id="@+id/favorites_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/favorite_trips"
            android:textColor="@color/material_light"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:paddingBottom="16dp"
        android:background="@color/material_light">

        <TextView
            android:id="@+id/empty_favorites_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/empty_favorites_list_view"
            android:textSize="16sp"
            android:visibility="gone" />

        <ListView
            android:id="@+id/favorites_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/material_light">

        <TextView
            android:id="@+id/recents_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/recent_trips"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recents_text"
            android:background="@color/material_light">

            <TextView
                android:id="@+id/empty_recents_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/empty_recents_list_view"
                android:textSize="16sp"
                android:visibility="gone" />

            <ListView
                android:id="@+id/recents_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:choiceMode="singleChoice" />

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>